--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html lang="hr">
   <head></head>
-  <body></body>
+  <body>
+    <h1>Hello this is meant to be a project for me!</h1>
+    <p>Everybody dance!</p>
+  </body>
 </html>
