Third commit - still learning

--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@
   <body>
     <h1>Hello this is meant to be a project for me!</h1>
     <p>Everybody dance!</p>
+    <p>Yo whats up</p>
   </body>
 </html>
