--- a/index.html
+++ b/index.html
@@ -5,5 +5,7 @@
     <h1>Hello this is meant to be a project for me!</h1>
     <p>Everybody dance!</p>
     <p>Yo whats up</p>
+    <p>Message for new branch</p>
+    <p>Still on the new branch</p>
   </body>
 </html>
