--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <p>Everybody dance!</p>
     <p>Yo whats up</p>
     <p>Message for new branch</p>
-    <p>Still on the new branch</p>
+    <p>Still on the new branch, and I like to play Rocket League</p>
   </body>
 </html>
