--- a/index.html
+++ b/index.html
@@ -2,10 +2,6 @@
 <html lang="hr">
   <head></head>
   <body>
-    <h1>Hello this is meant to be a project for me!</h1>
-    <p>Everybody dance!</p>
-    <p>Yo whats up</p>
-    <p>Message for new branch</p>
-    <p>Still on the new branch</p>
+    <p>This is on a master branch</p>
   </body>
 </html>
